--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,134 @@
 @charset "UTF-8";
+body {
+  padding: 0px;
+  background-color: black;
+}
+img {
+  width: 100%;
+  height: 100%;
+}
+.content {
 
+}
+.lamp {
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50.5%);
+  width: 300px;
+  height: 300px;
+  cursor: pointer;
+}
+.hang {
+  position: absolute;
+  top: 85px;
+  left: 130px;
+}
+.hang-wire {
+  position: relative;
+  background-color: #9e9e9c;
+  width: 2px;
+  height: 50px;
+}
+.hang-ball {
+  position: relative;
+  top: -5px;
+  right: 3px;
+  background-color: #e2c962;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+}
+.scene {
+
+}
+.hidden {
+  display: none;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+.visible {
+  display: block;
+  opacity: 1;
+  transition: opacity 0.2s ease;
+}
+.mage {
+  position: absolute;
+  top: 700px;
+  left: 50%;
+  transform: translateX(-95%);
+  width: 300px;
+  height: 300px;
+}
+.rabbit {
+  position: absolute;
+  top: 650px;
+  left: 50%;
+  width: 150px;
+  height: 150px;
+}
+.rabbit:hover {
+  cursor: pointer;
+}
+.pull-out {
+  transform: translate(70%, 0px);
+  opacity: 1;
+  transition: all 0.5s ease;  
+}
+.pigeon {
+  position: absolute;
+  top: 650px;
+  left: 50%;
+  width: 140px;
+  height: 140px;
+}
+.pigeon:hover {
+  cursor: pointer;
+}
+.put-in {
+  transform: translate(70%, 50px);
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+.hat {
+  position: absolute;
+  top: 800px;
+  left: 50%;
+  transform: translateX(70%);
+  width: 150px;
+  height: 150px;
+}
+.hat:hover {
+  cursor: pointer;
+}
+.light {
+  position: absolute;
+  top: 135px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-left: 400px solid transparent;
+  border-right: 400px solid transparent;
+  border-bottom: 900px solid #ffff0080;
+  width: 86px;
+  border-top: 50px solid transparent;
+  background-color: #0000ff00;
+  pointer-events: none;
+}
+.curtain {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("/images/curtain.jpg");
+  background-size: cover;
+  background-position: center bottom;
+}
+.curtain:hover {
+  transform: translateY(-5%);
+  transition: transform 0.2s ease;
+}
+.curtain.active {
+  transform: translateY(-100%);
+  transition: transform 1s ease;
+}
